--- a/Android Nativo/CalcSalute/app/src/main/AndroidManifest.xml
+++ b/Android Nativo/CalcSalute/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         <activity
             android:name=".imc_result"
             android:exported="true" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".LoginActivity">
+
+        </activity>
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
